--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,138 +5,143 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
-          <span class="release-date">Jan 18, 2024</span>
-          <span class="release-version">v2.5</span>
-          <span class="release-description">Ken Burns has a cross-fade transition. File formats .tiff & .jxl are supported now. Plus sorting by filename has been fixed.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Dec 13, 2024</span>
-          <span class="release-version">v2.4</span>
-          <span class="release-description">You can show/hide timer during a slideshow. Pausing a grid-mode slideshow is possible now.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Nov 16, 2024</span>
-          <span class="release-version">v2.3</span>
-          <span class="release-description">Memory managment significantly improved (+ memory leak fixed). Minor UI bugs fixed.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Oct 28, 2024</span>
-          <span class="release-version">v2.2</span>
-          <span class="release-description">Bug fix: shuffle mode not working properly. Mac sleep prevention and support for multiple Slideshower app instances.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Oct 20, 2024</span>
-          <span class="release-version">v2.1</span>
-          <span class="release-description">'Live Mode' added. File formats .webp & .avif file are supported now. </span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Aug 28, 2024</span>
-          <span class="release-version">v2.0</span>
-          <span class="release-description">You can export your slideshow to a video file.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Aug 2, 2024</span>
-          <span class="release-version">v1.19</span>
-          <span class="release-description">Major app performance improvements (RAM usage & speed). Ken Burns effect added.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Jul 23, 2024</span>
-          <span class="release-version">v1.18</span>
-          <span class="release-description">Additional EXIF data (in the 'info overlay box'). Improved loop mode. Improved UX - better toast message about added files.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Jun 24, 2024</span>
-          <span class="release-version">v1.17</span>
-          <span class="release-description">App settings are automatically saved & restored. You can display file info during a slideshow.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Jun 12, 2024</span>
-          <span class="release-version">v1.16</span>
-          <span class="release-description">2x2 grid added. Additional sorting options. Min. mac OS required downgraded to 12.0</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Jun 3, 2024</span>
-          <span class="release-version">v1.15</span>
-          <span class="release-description">Drag & drop is here! All files from subdirectories are automatically added to the app.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">May 24, 2024</span>
-          <span class="release-version">v1.14</span>
-          <span class="release-description">Bug fix: corrected issue in delay input box. Max. delay increased to 9999 seconds. Improved UI.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Apr 17, 2024</span>
-          <span class="release-version">v1.13</span>
-          <span class="release-description">Improved shuffle mode.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Mar 29, 2024</span>
-          <span class="release-version">v1.12</span>
-          <span class="release-description">You can sort files (by name or creation date) before a slideshow. UI improvements.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Mar 21, 2024</span>
-          <span class="release-version">v1.11</span>
-          <span class="release-description">Grid view (3x3) added. Problem with photos being resized during a transition fixed.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Mar 14, 2024</span>
-          <span class="release-version">v1.10</span>
-          <span class="release-description">Animated GIFs are supported. Major loading speed improvement. Dark mode issues fixed.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Jan 24, 2024</span>
-          <span class="release-version">v1.9</span>
-          <span class="release-description">You can exit full-screen mode and run a slideshow in a window. Mouse cursor disapears after 1 sec of inactivity. Auto-update bug fix.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Jan 3, 2024</span>
-          <span class="release-version">v1.8</span>
-          <span class="release-description">App is now verified by Apple - easy installation. Auto-update functionality added.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Dec 13, 2023</span>
-          <span class="release-version">v1.7</span>
-          <span class="release-description">You can hide/show thumbnails. You can use arrow keys to go to next/previous photo. Dark mode fixed.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Dec 11, 2023</span>
-          <span class="release-version">v1.6</span>
-          <span class="release-description">You can remove added photos. Import of big number of photos is much faster now. UI
-            improvements.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Dec 7, 2023</span>
-          <span class="release-version">v1.5</span>
-          <span class="release-description">You can pause & resume a slideshow by pressing a spacebar.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Dec 5, 2023</span>
-          <span class="release-version">v1.4</span>
-          <span class="release-description">You can stop a slideshow from the main window. Even more UI improvements & bug
-            fixes.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Dec 1, 2023</span>
-          <span class="release-version">v1.3</span>
-          <span class="release-description">UI improved a bit and a bugfix arrived.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Nov 26, 2023</span>
-          <span class="release-version">v1.2</span>
-          <span class="release-description">You can enable a smooth fade transition.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Nov 22, 2023</span>
-          <span class="release-version">v1.1</span>
-          <span class="release-description">Full-screen mode bug fixed. ESC button quits the slideshow. You can select
-            directories and all photos inside will be added.</span>
-        </div>
-        <div class="release-note">
-          <span class="release-date">Oct 25, 2023</span>
-          <span class="release-version">v1.0</span>
-          <span class="release-description">Slideshower for macOS released to the public &#127881;</span>
-        </div>
+            <span class="release-date">Feb 7, 2025</span>
+            <span class="release-version">v2.6</span>
+            <span class="release-description">Full-screen toggle with "F". Added option "Float on top" in View menu. Memory management enhancements.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Jan 18, 2025</span>
+            <span class="release-version">v2.5</span>
+            <span class="release-description">Ken Burns has a cross-fade transition. File formats .tiff & .jxl are supported now. Plus sorting by filename has been fixed.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Dec 13, 2024</span>
+            <span class="release-version">v2.4</span>
+            <span class="release-description">You can show/hide timer during a slideshow. Pausing a grid-mode slideshow is possible now.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Nov 16, 2024</span>
+            <span class="release-version">v2.3</span>
+            <span class="release-description">Memory managment significantly improved (+ memory leak fixed). Minor UI bugs fixed.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Oct 28, 2024</span>
+            <span class="release-version">v2.2</span>
+            <span class="release-description">Bug fix: shuffle mode not working properly. Mac sleep prevention and support for multiple Slideshower app instances.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Oct 20, 2024</span>
+            <span class="release-version">v2.1</span>
+            <span class="release-description">'Live Mode' added. File formats .webp & .avif file are supported now. </span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Aug 28, 2024</span>
+            <span class="release-version">v2.0</span>
+            <span class="release-description">You can export your slideshow to a video file.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Aug 2, 2024</span>
+            <span class="release-version">v1.19</span>
+            <span class="release-description">Major app performance improvements (RAM usage & speed). Ken Burns effect added.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Jul 23, 2024</span>
+            <span class="release-version">v1.18</span>
+            <span class="release-description">Additional EXIF data (in the 'info overlay box'). Improved loop mode. Improved UX - better toast message about added files.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Jun 24, 2024</span>
+            <span class="release-version">v1.17</span>
+            <span class="release-description">App settings are automatically saved & restored. You can display file info during a slideshow.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Jun 12, 2024</span>
+            <span class="release-version">v1.16</span>
+            <span class="release-description">2x2 grid added. Additional sorting options. Min. mac OS required downgraded to 12.0</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Jun 3, 2024</span>
+            <span class="release-version">v1.15</span>
+            <span class="release-description">Drag & drop is here! All files from subdirectories are automatically added to the app.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">May 24, 2024</span>
+            <span class="release-version">v1.14</span>
+            <span class="release-description">Bug fix: corrected issue in delay input box. Max. delay increased to 9999 seconds. Improved UI.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Apr 17, 2024</span>
+            <span class="release-version">v1.13</span>
+            <span class="release-description">Improved shuffle mode.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Mar 29, 2024</span>
+            <span class="release-version">v1.12</span>
+            <span class="release-description">You can sort files (by name or creation date) before a slideshow. UI improvements.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Mar 21, 2024</span>
+            <span class="release-version">v1.11</span>
+            <span class="release-description">Grid view (3x3) added. Problem with photos being resized during a transition fixed.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Mar 14, 2024</span>
+            <span class="release-version">v1.10</span>
+            <span class="release-description">Animated GIFs are supported. Major loading speed improvement. Dark mode issues fixed.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Jan 24, 2024</span>
+            <span class="release-version">v1.9</span>
+            <span class="release-description">You can exit full-screen mode and run a slideshow in a window. Mouse cursor disapears after 1 sec of inactivity. Auto-update bug fix.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Jan 3, 2024</span>
+            <span class="release-version">v1.8</span>
+            <span class="release-description">App is now verified by Apple - easy installation. Auto-update functionality added.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Dec 13, 2023</span>
+            <span class="release-version">v1.7</span>
+            <span class="release-description">You can hide/show thumbnails. You can use arrow keys to go to next/previous photo. Dark mode fixed.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Dec 11, 2023</span>
+            <span class="release-version">v1.6</span>
+            <span class="release-description">You can remove added photos. Import of big number of photos is much faster now. UI
+              improvements.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Dec 7, 2023</span>
+            <span class="release-version">v1.5</span>
+            <span class="release-description">You can pause & resume a slideshow by pressing a spacebar.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Dec 5, 2023</span>
+            <span class="release-version">v1.4</span>
+            <span class="release-description">You can stop a slideshow from the main window. Even more UI improvements & bug
+              fixes.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Dec 1, 2023</span>
+            <span class="release-version">v1.3</span>
+            <span class="release-description">UI improved a bit and a bugfix arrived.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Nov 26, 2023</span>
+            <span class="release-version">v1.2</span>
+            <span class="release-description">You can enable a smooth fade transition.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Nov 22, 2023</span>
+            <span class="release-version">v1.1</span>
+            <span class="release-description">Full-screen mode bug fixed. ESC button quits the slideshow. You can select
+              directories and all photos inside will be added.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Oct 25, 2023</span>
+            <span class="release-version">v1.0</span>
+            <span class="release-description">Slideshower for macOS released to the public &#127881;</span>
+          </div>
         </div>
         <div class="text-center py-3">
           <!-- <button class="see-more-btn" onclick="toggleReleaseNotes(this)">See more</button> -->
