--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Feb 25, 2025</span>
+            <span class="release-version">v2.7</span>
+            <span class="release-description">You can select added files and remove only them. Fixed "float on top" issue. Minor UI improvements.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Feb 7, 2025</span>
             <span class="release-version">v2.6</span>
             <span class="release-description">Full-screen toggle with "F". Added option "Float on top" in View menu. Memory management enhancements.</span>
