--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">May 20, 2025</span>
+            <span class="release-version">v3.0</span>
+            <span class="release-description">You can add audio files as a background music! Fixed a major bug that crashed the app when the corrupted image(s) were added.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Apr 21, 2025</span>
             <span class="release-version">v2.9</span>
             <span class="release-description">Added 'side-by-side' view mode. Fixed issue with ESC button not working for macOS < 14. Improved the quality of transitions in exported videos.</span>
