--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Jun 10, 2025</span>
+            <span class="release-version">v3.1</span>
+            <span class="release-description">You can export videos with Ken Burns effect. And you can also choose the display that will be used to run a slideshow.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">May 20, 2025</span>
             <span class="release-version">v3.0</span>
             <span class="release-description">You can add audio files as a background music! Fixed a major bug that crashed the app when the corrupted image(s) were added.</span>
@@ -17,7 +22,7 @@
           <div class="release-note">
             <span class="release-date">Mar 27, 2025</span>
             <span class="release-version">v2.8</span>
-            <span class="release-description">Addded 'Advanced options' with fit/fill scaling mode. Bug fixes.</span>
+            <span class="release-description">Added 'Advanced options' with fit/fill scaling mode. Bug fixes.</span>
           </div>
           <div class="release-note">
             <span class="release-date">Feb 25, 2025</span>
