--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Jun 22, 2025</span>
+            <span class="release-version">v3.2</span>
+            <span class="release-description">You can save/load your slideshows. Live Mode improvements and fixes. Grid mode fixed - sometimes not all photos were shown during a slideshow.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Jun 10, 2025</span>
             <span class="release-version">v3.1</span>
             <span class="release-description">You can export videos with Ken Burns effect. And you can also choose the display that will be used to run a slideshow.</span>
