--- a/layouts/partials/head/_resources.html
+++ b/layouts/partials/head/_resources.html
@@ -13,5 +13,6 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <script>{{- $sharedJS.Content | safeJS -}}</script>
