--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -14,11 +14,11 @@
         <div class="testimonials-stats">
           <div class="stat">
             <span class="stat-number">4K+</span>
-            <span class="stat-label">Installations</span>
+            <span class="stat-label">Downloads</span>
           </div>
           <div class="stat">
-            <span class="stat-number">55K+</span>
-            <span class="stat-label">Slideshows started</span>
+            <span class="stat-number">2+</span>
+            <span class="stat-label">years of happy users</span>
           </div>
         </div>
       </div>
