--- a/layouts/partials/sections/testimonials.html
+++ b/layouts/partials/sections/testimonials.html
@@ -18,7 +18,7 @@
           </div>
           <div class="stat">
             <span class="stat-number">2+</span>
-            <span class="stat-label">years of happy users</span>
+            <span class="stat-label">Years of happy users</span>
           </div>
         </div>
       </div>
