Added Tems of Service

--- a/layouts/partials/shared/footer.html
+++ b/layouts/partials/shared/footer.html
@@ -4,11 +4,14 @@
       <div class="col-6 col-xl-4 text-center pb-4">
         <h4 class="fs-4 fw-semibold text-primary">{{ .Site.Title }}</h4>
         <p class="small text-black-61">{{ .Site.Params.description }}</p>
-        <div class="mb-3">
+        <div class="mb-2">
           <a class="small text-black-61 mb-1" href="/about">About me</a>
         </div>
-        <div class="mb-3">
+        <div class="mb-2">
           <a class="small text-black-61" href="{{ "privacy-policy" | relURL }}">Privacy Policy</a>
+        </div>
+        <div class="mb-2">
+          <a class="small text-black-61" href="{{ "terms-of-service" | relURL }}">Terms of Service</a>
         </div>
       </div>
       <!-- <div class="col-4 col-xl-2 text-center text-xl-start pb-4">
