Removed margin-top for headers in privacy page & ToS page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,9 +1,9 @@
 .mainHeaderPrivacyPolicy {
-    margin-top: 4rem;
+    /* margin-top: 2rem; */
 }
 
 .subHeaderPrivacyPolicy {
-    margin-top: 1.5rem;
+    /* margin-top: 0.5rem; */
 }
 
 .shadow-enhanced {
