--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Aug 12, 2025</span>
+            <span class="release-version">v3.5</span>
+            <span class="release-description">"Manual mode" added. You can use arrows to manually switch files during a slideshow.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Jul 29, 2025</span>
             <span class="release-version">v3.4</span>
             <span class="release-description">Smart Image Scaling mode (Best Fit) added.</span>
