--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -137,8 +137,13 @@
     background-color: #e2e8f0;
   }
 
-  /* Font smoothing for consistent rendering across devices */
-  body, * {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  /* Mobile font weight adjustment for iOS Safari */
+  @media screen and (max-width: 768px) {
+    body, p, .faq-answer, .release-description, .feature-text {
+      font-weight: 300 !important;
+    }
+    
+    .faq-question, h1, h2, h3, h4, h5, h6 {
+      font-weight: 500 !important;
+    }
   }
