--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Sept 30, 2025</span>
+            <span class="release-version">v3.7</span>
+            <span class="release-description">Mostly bug fixes plus improvements for live mode.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Aug 26, 2025</span>
             <span class="release-version">v3.6</span>
             <span class="release-description">Cross-fade duration is now configurable. Filename sorting mechanism fixed.</span>
