--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,7 +5,12 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
-            <span class="release-date">Sept 30, 2025</span>
+            <span class="release-date">Sept 36, 2025</span>
+            <span class="release-version">v3.8</span>
+            <span class="release-description">Major improvements & fixes in Video Export functionality.</span>
+          </div>
+          <div class="release-note">
+            <span class="release-date">Sept 20, 2025</span>
             <span class="release-version">v3.7</span>
             <span class="release-description">Mostly bug fixes plus improvements for live mode.</span>
           </div>
