--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -46,7 +46,7 @@
         </div>
         <div class="faq-item">
           <h4 class="faq-question">Can Slideshower play background music while running a slideshow?</h4>
-          <h5 class="faq-answer">Starting with version 3.0, Slideshower supports playing background music during your slideshows. You can add multiple audio tracks that will play in sequence (in a loop or not). Supported audio formats are: .mp3, .wav, .aac, .aiff, .audio. <b>Note</b>: Currently, audio is only available during live slideshows and not when exporting to video. Audio support for video export is planned for a future update.</h5>
+          <h5 class="faq-answer">Starting with version 3.0, Slideshower supports playing background music during your slideshows. You can add multiple audio tracks that will play in sequence (in a loop or not). Supported audio formats are: .mp3, .wav, .aac, .aiff, .audio.</h5>
         </div>
           <div class="faq-item">
             <h4 class="faq-question">Can I request new features for Slideshower?</h4>
