--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,9 +5,14 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Oct 23, 2025</span>
+            <span class="release-version">v3.11</span>
+            <span class="release-description">Fixed Ken Burns stuttering in video export.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Oct 17, 2025</span>
             <span class="release-version">v3.10</span>
-            <span class="release-description">Increased import speed significantly. Added "r" shortuct to reveal a file in Finder.</span>
+            <span class="release-description">Increased import speed significantly. Added "r" shortcut to reveal a file in Finder.</span>
           </div>
           <div class="release-note">
             <span class="release-date">Oct 6, 2025</span>
