--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Nov 9, 2025</span>
+            <span class="release-version">v3.12</span>
+            <span class="release-description">Fixed UI to look good on macOS 26 Tahoe. Added suport for .m4a audio files</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Oct 23, 2025</span>
             <span class="release-version">v3.11</span>
             <span class="release-description">Fixed Ken Burns stuttering in video export.</span>
