--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Dec 16, 2025</span>
+            <span class="release-version">v3.14</span>
+            <span class="release-description">Overlay text/image can be added to a slideshow.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Dec 7, 2025</span>
             <span class="release-version">v3.13</span>
             <span class="release-description">License can be manually deactivated from the app. Bug fixes and improvements for better stability.</span>
