Fixed url in head

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="{{ if .Params.Keywords }}{{ delimit .Params.Keywords ", " }}{{ end }}">
   <link rel="canonical" href="https://slideshower.com" />
 
-  <meta property="og:title" content="SlideShower for macOS" />
+  <meta property="og:title" content="Slideshower for macOS" />
   <meta property="og:description" content="The easiest way to run photo slideshows on macOS." />
   <meta property="og:image" content="https://slideshower.com/images/slideshower_screenshot.webp" />
   <meta property="og:url" content="https://slideshower.com" />
@@ -38,7 +38,7 @@
       "@type": "SoftwareApplication",
       "name": "Slideshower",
       "description": "Slideshower is the simplest app to run photo slideshows on macOS. Enjoy a user-friendly, full-screen photo show experience with shuffle mode for free.",
-      "image": "https://www.slideshower.com/images/slideshower_screenshot.webp",
+      "image": "https://slideshower.com/images/slideshower_screenshot.webp",
       "operatingSystem": "macOS",
       "applicationCategory": "Multimedia",
       "offers": {
@@ -46,16 +46,16 @@
         "price": "0.00",
         "priceCurrency": "USD"
       },
-      "downloadUrl": "https://www.slideshower.com",
+      "downloadUrl": "https://slideshower.com",
       "featureList": [
         "Full screen mode",
         "Shuffle mode",
         "Fading transition",
         "Free to use"
       ],
-      "screenshot": "https://www.slideshower.com/images/slideshower_screenshot.webp",
+      "screenshot": "https://slideshower.com/images/slideshower_screenshot.webp",
       "softwareVersion": "1.2",
-      "releaseNotes": "https://www.slideshower.com"
+      "releaseNotes": "https://slideshower.com"
     }
     </script>
 </head>
