--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ .Site.Params.description }}{{ end }}" />
-  <meta name="keywords" content="{{ if .Params.Keywords }}{{遍历 .Params.Keywords ", " }}{{ end }}">
+  <meta name="keywords" content="{{ if .Params.Keywords }}{{ delimit .Params.Keywords ", " }}{{ end }}" />
 
   <link rel="canonical" href="{{ .Permalink }}" />
 
