Added UTM to track conversions from my website to lemonsqueezy

--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -18,7 +18,7 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How much does Slideshower cost?</h4>
-            <h5 class="faq-answer">It's free to use up to 150 files. If you need to run a bigger slideshow, you can <a href="https://slideshower.lemonsqueezy.com/buy/1ca1b16c-3429-495e-b968-431dd333a66e">buy</a> a one-time license for $19 only.</h5>
+            <h5 class="faq-answer">It's free to use up to 150 files. If you need to run a bigger slideshow, you can <a href="https://slideshower.lemonsqueezy.com/buy/1ca1b16c-3429-495e-b968-431dd333a66e?utm_source=slideshower_web&utm_medium=website&utm_campaign=faq_link">buy</a> a one-time license for $19 only.</h5>
           </div>
           <div class="faq-item">
             <h4 class="faq-question">How do I download Slideshower?</h4>
