--- a/layouts/partials/sections/8_pricing.html
+++ b/layouts/partials/sections/8_pricing.html
@@ -31,7 +31,7 @@
                                         <li><i class="bi bi-star-fill"></i> Includes all future updates & feature requests</li>
                                     </ul>
                                 </div>
-                                <a href="https://slideshower.lemonsqueezy.com/buy/1ca1b16c-3429-495e-b968-431dd333a66e" class="btn btn-light mt-3 w-50 mx-auto">Purchase your license</a>
+                                <a href="https://slideshower.lemonsqueezy.com/buy/1ca1b16c-3429-495e-b968-431dd333a66e?utm_source=slideshower_web&utm_medium=website&utm_campaign=checkout_button" class="btn btn-light mt-3 w-50 mx-auto">Purchase your license</a>
                             </div>
                         </div>
                     </div>
