--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Dec 22, 2025</span>
+            <span class="release-version">v3.15</span>
+            <span class="release-description">You can choose background color now. You can start a slideshow with a keyboard shortcut (Cmd + R).</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Dec 16, 2025</span>
             <span class="release-version">v3.14</span>
             <span class="release-description">Overlay text/image can be added to a slideshow.</span>
