--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Dec 31, 2025</span>
+            <span class="release-version">v4.0</span>
+            <span class="release-description">Video files (mp4, m4v, mov) are supported now!</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Dec 22, 2025</span>
             <span class="release-version">v3.15</span>
             <span class="release-description">You can choose background color now. You can start a slideshow with a keyboard shortcut (Cmd + R).</span>
