Updated FAQ section

--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -38,7 +38,10 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">What file formats are supported?</h4>
-            <h5 class="faq-answer">Slideshower currently supports the following image formats: JPG/JPEG, PNG, HEIC, GIF, WebP, TIF, JXL and AVIF. And these video formats: .MP4, .M4V, .MOV</h5>
+            <h5 class="faq-answer">Slideshower currently supports the following file formats:<br>
+            Images: JPEG/JPG, PNG, HEIC, TIFF, BMP, GIF (animated), WebP, AVIF, JXL<br>
+            Videos: MP4, M4V, MOV - playable during slideshows<br>
+            Audio: MP3, WAV, AAC, AIFF, M4A - for background music</h5>
         </div>
         <div class="faq-item">
           <h4 class="faq-question">Can Slideshower handle folders with multiple subfolders?</h4>
@@ -46,7 +49,7 @@
         </div>
         <div class="faq-item">
           <h4 class="faq-question">Can Slideshower play background music while running a slideshow?</h4>
-          <h5 class="faq-answer">Starting with version 3.0, Slideshower supports playing background music during your slideshows. You can add multiple audio tracks that will play in sequence (in a loop or not). Supported audio formats are: .mp3, .wav, .aac, .aiff, .m4a, .audio.</h5>
+          <h5 class="faq-answer">Yes! Add multiple audio tracks that play sequentially with optional looping. Supported formats: MP3, WAV, AAC, AIFF, M4A. Audio is included when exporting slideshows to video.</h5>
         </div>
           <div class="faq-item">
             <h4 class="faq-question">Can I request new features for Slideshower?</h4>
