--- a/layouts/partials/sections/4_faq.html
+++ b/layouts/partials/sections/4_faq.html
@@ -38,10 +38,12 @@
           </div>
           <div class="faq-item">
             <h4 class="faq-question">What file formats are supported?</h4>
-            <h5 class="faq-answer">Slideshower currently supports the following file formats:<br>
-            Images: JPEG/JPG, PNG, HEIC, TIFF, BMP, GIF (animated), WebP, AVIF, JXL<br>
-            Videos: MP4, M4V, MOV - playable during slideshows<br>
-            Audio: MP3, WAV, AAC, AIFF, M4A - for background music</h5>
+            <h5 class="faq-answer">Slideshower currently supports the following file formats:
+            <ul>
+              <li>Images: JPEG/JPG, PNG, HEIC, TIFF, BMP, GIF (animated), WebP, AVIF, JXL</li>
+              <li>Videos: MP4, M4V, MOV - playable during slideshows</li>
+              <li>Audio: MP3, WAV, AAC, AIFF, M4A - for background music</li>
+            </ul></h5>
         </div>
         <div class="faq-item">
           <h4 class="faq-question">Can Slideshower handle folders with multiple subfolders?</h4>
